--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,5 +16,9 @@
     <string name="avatar9">avatar9</string>
     <string name="textview">TextView</string>
     <string name="start">start</string>
+    <string name="map1_button1">Button</string>
+    <string name="map2_button2">Button</string>
+    <string name="map3_button3">Button</string>
+    <string name="map4_button4">Button</string>
 
 </resources>
