--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,5 +20,9 @@
     <string name="map2_button2">Button</string>
     <string name="map3_button3">Button</string>
     <string name="map4_button4">Button</string>
+    <string name="go_forward">Go Forward</string>
+    <string name="turn_Rıght">turn rıght</string>
+    <string name="turnLeft">turn Left</string>
+    <string name="bee">bee</string>
 
 </resources>
