--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,7 +24,7 @@
     <string name="turn_Rıght">turn rıght</string>
     <string name="turnLeft">turn Left</string>
     <string name="bee">bee</string>
-    <string name="music1_button" >MUSIC 1</>
+    <string name="music1_button" >MUSIC 1</string>
     <string name="music2_button">MUSIC 2</string>
     <string name="music3_button">MUSIC 3</string>
     <string name="music4_button">MUSIC 4</string>
