--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,6 +46,7 @@
     <string name="star1">star1</string>
     <string name="star2">star2</string>
     <string name="star3">star3</string>
+    <string name="Movements">Movements</string>
     >>>>>>> Stashed changes
 
 </resources>
