--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,6 +47,7 @@
     <string name="star2">star2</string>
     <string name="star3">star3</string>
     <string name="Movements">Movements</string>
+    <string name="get_nectar">Get Nectar</string>
     >>>>>>> Stashed changes
 
 </resources>
