--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,6 +48,7 @@
     <string name="star3">star3</string>
     <string name="Movements">Movements</string>
     <string name="get_nectar">Get Nectar</string>
+    <string name="get_key">get key</string>
     >>>>>>> Stashed changes
 
 </resources>
