--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -55,6 +55,7 @@
     <string name="degree_creative">DEGREE</string>
     <string name="apply_button">APPLY</string>
     <string name="reset_button">RESET</string>
+    <string name="_1">1</string>
     >>>>>>> Stashed changes
 
 </resources>
