--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">FirstPage</string>
+    <string name="app_name">FunAlgo</string>
     <string name="logo">logo</string>
     <string name="name">Name</string>
     <string name="user">user</string>
